--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Cashstory",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "resemblejs": "^3.2.3"
   }
 }
